@@ -58,9 +58,18 @@ Depends: ${shlibs:Depends},
          nautilus-data (>= 2.91.3-1)
 Recommends: pulseaudio,
             iio-sensor-proxy
-Breaks: gnome-session (<< 3.24),
-        gnome-shell ( << 3.13.92),
-        gnome-control-center (<< 1:3.15.4)
+Breaks: afterstep (<< 2.2.12-10.1~),
+        budgie-core (<< 10.3.1-4~),
+        cairo-dock (<< 3.4.1-1.1~),
+        gdm3 (<< 3.24),
+        gnome-control-center (<< 1:3.15.4),
+        gnome-initial-setup (<< 3.24),
+        gnome-session (<< 3.24),
+        gnome-session-flashback (<< 3.24),
+        gnome-shell (<< 3.22.3-4~),
+        gnome-shell-extensions (<< 3.22.2-2~),
+        openbox-gnome-session (<< 3.6.1-4.1~),
+        xmonad (<< 0.13-5~)
 Description: daemon handling the GNOME session settings
  This package contains the daemon which is responsible for setting the
  various parameters of a GNOME session and the applications that run
